# yunxiao-cli

./: .gitignore  .yunxiao.json.temple  AGENTS.md  README.md  install.bat  install.sh  install_skill.bat  install_skill.sh  pyproject.toml
skills/: SKILLS.md
skills/yunxiao-workflow/: SKILL.md  config.md
skills/yunxiao-workflow/flows/: standard-flow.md
skills/yunxiao-workflow/templates/: bug-template.md  git-commit-template.md  reply-blocker-template.md  reply-progress-template.md  reply-review-template.md  reply-template.md  requirement-template.md  task-template.md
src/yunxiao_cli/: __init__.py  cli.py  main.py
src/yunxiao_cli/app/: attachment_service.py  auth_service.py  codeup_service.py  comment_service.py  context_service.py  errors.py  knowledge_service.py  meta_service.py  profile_service.py  project_service.py  relation_service.py  sprint_service.py  thoughts_service.py  workitem_service.py  workitem_summary.py
src/yunxiao_cli/domain/: __init__.py  models.py  store.py
src/yunxiao_cli/infra/: __init__.py  base.py  codeup.py  config.py  projex.py
tests/: __init__.py  test_cli_bootstrap.py  test_comment_relation_commands.py  test_context_command.py  test_install_docs.py  test_knowledge_commands.py  test_knowledge_service.py  test_login_command.py  test_meta_project_commands.py  test_meta_service.py  test_profile_service.py  test_store.py  test_workitem_attachment_commands.py  test_workitem_query_commands.py  test_workitem_update_commands.py
