[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yunxiao-cli"
version = "0.1.0"
description = "Yunxiao CLI for workitem collaboration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "browser-cookie3>=0.20.1",
  "playwright>=1.52.0",
  "requests>=2.31.0",
]

[project.scripts]
yunxiao_cli = "yunxiao_cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
